svc/post/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9001
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: grpc_json
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: "/health"
                          direct_response:
                            status: 200
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.grpc_json_transcoder
                    config:
                      proto_descriptor: "/pb/post.pb"
                      services:
                        - post.PostService
                      print_options:
                        add_whitespace: false
                        always_print_primitive_fields: false
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: false
                  - name: envoy.router
                access_log:
                  - name: envoy.file_access_log
                    filter:
                      not_health_check_filter: {}
                    config:
                      path: /dev/stdout
                  - name: envoy.file_access_log
                    filter:
                      or_filter:
                        filters:
                          - status_code_filter:
                              comparison:
                                op: GE
                                value:
                                  default_value: 400
                                  runtime_key: access_log.access_error.status
                          - duration_filter:
                              comparison:
                                op: GE
                                value:
                                  default_value: 2000
                                  runtime_key: access_log.access_error.duration
                          - traceable_filter: {}
                    config:
                      path: /dev/stderr
  clusters:
    - name: local_service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          max_requests: 200
      health_checks:
        - timeout: 1s
          interval: 5s
          interval_jitter: 1s
          unhealthy_threshold: 3
          healthy_threshold: 3
          grpc_health_check: {}
      hosts:
        - socket_address:
            protocol: TCP
            address: 127.0.0.1
            port_value: 9000
